--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:coverage": "ng test --coverage",
     "lint": "ng lint"
   },
   "private": true,
@@ -28,6 +29,7 @@
     "@angular-devkit/build-angular": "^19.0.7",
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.0",
+    "@ngneat/spectator": "^19.4.1",
     "@types/jest": "^29.5.14",
     "angular-eslint": "19.2.1",
     "eslint": "^9.22.0",
